force-app/main/default/objects/QuoteLineItem/fields/Acces_Type__c.field-meta.xml
<CustomField>
    <fullName>Acces_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Access_Type</valueSetName>
    </valueSet>
</CustomField>