force-app/main/default/objects/QuoteLineItem/fields/Entry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_Time__c</fullName>
    <label>Entry Date Time</label>
    <type>DateTime</type>
</CustomField>