force-app/main/default/objects/QuoteLineItem/fields/Renewal_Price_Adjustment_2__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price_Adjustment_2__c</fullName>
    <description>Renewal price adjustment for the second term</description>
    <label>Renewal Price Adjustment #2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>