force-app/main/default/objects/QuoteLineItem/fields/Renewal_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price_Adjustment__c</fullName>
    <label>Renewal Price Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>